Drop plexus-utils